RL-26: implement postman collection
